writing-a-c-compiler-tests/tests/chapter_9/invalid_types/call_variable_as_function.c
int x(void);

int main(void) {
    int x = 0;
 
    return x();
}